Maintain java 1.7 compatibility